# casper-fixtures

./: Cargo.toml  Makefile  README.md
src/: fixture_gen.rs
