[package]
name = "casper-fixtures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-engine-test-support = "7.0.1"
casper-execution-engine = { version = "7.0.1", features = ["test-support"] }
casper-types = { version = "4.0.0", default_features = false, features = ["datasize", "json-schema"] }
casper-hashing = "3.0.0"
lmdb = "0.8.0"

fs_extra = "1.2.0"
serde = "1"
serde_json = "1"
tempfile = "3.4.0"

[lib]
name = "casper_fixtures"
path = "src/fixture_gen.rs"
bench = false
doctest = false
